--- a/la/static/css/style.css
+++ b/la/static/css/style.css
@@ -1,3 +1,139 @@
+
+
+/* =Reset default browser CSS. Based on work by Eric Meyer: http://meyerweb.com/eric/tools/css/reset/index.html
+
+-------------------------------------------------------------- */
+
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, font, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td {
+	background: transparent;
+	border: 0;
+	margin: 0;
+	padding: 0;
+	vertical-align: baseline;
+}
+
+
+ q
+
+
 body {
-	color:#222;
+
+	line-height: 1;
+
+}
+h1, h2, h3, h4, h5, h6 {
+
+	clear: both;
+	font-weight: normal;
+
+}
+ol, ul {
+
+	list-style: none;
+}
+blockquote {
+	quotes: none;
+}
+blockquote:before, blockquote:after {
+	content: '';
+	content: none;
+}
+del {
+	text-decoration: line-through;
+}
+/* tables still need 'cellspacing="0"' in the markup */
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+a img {
+	border: none;
+}
+a {
+
+	text-decoration:none;
+
+}
+/*
+ * color0: #141414
+ * color1: #203E42
+ * color2: #7E9899
+ * color3: #D4FFFD
+ * color4: #DB9655
+ * color5: #DE6A00
+ */
+
+body {
+	color:#D4FFFD;
+	background:#141414;
+}
+
+a {
+	color: #DB9655;
+}
+
+a:visited {
+	color:#DE6A00;
+}
+
+time {
+
+	display:block;
+	font-size: 0.8em;
+	margin:1%;
+
+}
+
+article {
+
+	border-bottom:1px solid #7E9899;
+}
+
+nav li {
+	display: inline-block;
+	margin-left:1em;
+}
+
+#header {
+
+	background:#203E42;
+	margin:1%;
+
+}
+
+#header > h1 {
+
+	margin-bottom:1em;
+
+}
+
+.box {
+
+	background:#203E42;
+	border-radius:5px;
+	margin:3%;
+	padding:1%;
+
+}
+
+#content {
+
+	width:70%;
+	float:left;
+
+}
+
+#sidebar {
+
+	float:left;
+
 }
