--- a/templates/lib_admin/book.html
+++ b/templates/lib_admin/book.html
@@ -6,21 +6,34 @@
 <h1>{{book.name}}</h1>
 <h2>
 	{% if book.authors.count > 1 %}
-		{{book.authors.all|join:", " }}
+		{% for author in book.authors.all %}
+		<a href="{{author.get_absolute_url}}">{{author.name}}</a>, 
+		{% endfor %}
 	{% else %}
-		{{ book.authors.all.0.name }}
+	<a href="{{ book.authors.all.0.get_absolute_url}}">{{ book.authors.all.0.name }}</a>
 	{% endif %}
 </h2>
 <h3>{{book.publisher}}</h3>
 
-<div id="synopsis" class="article">{{book.synopsis|escape|linebreaks}}</div>
+<div id="synopsis" class="article">{{book.synopsis|safe|linebreaks}}</div>
+
+{% if book.cover %}
+<div class="cover">
+	<img src="{{book.cover.url}}" alt="" />
+</div>
+{%endif%}
 
 {% endblock content %}
 
 {% block sidebar %}
-	{% if book.cover %}
-		<div class="cover">
-			<img src="{{book.cover.url}}" alt="" />
-		</div>
-	{%endif%}
+	{% if others_by_author %}
+		<h3>Others by same author(s)</h3>
+		<ul>
+			{% for book_a in others_by_author %}
+				<li>
+				<a href="{{ book_a.get_absolute_url}}">{{book_a.name}}</a>
+				</li>
+			{% endfor %}
+		</ul>
+	{% endif %}
 {% endblock sidebar %}
