--- a/la/static/css/style.css
+++ b/la/static/css/style.css
@@ -81,6 +81,31 @@ a:visited {
 	color:#DE6A00;
 }
 
+h1 {
+
+	margin-bottom:0.5em;
+	font-size:2em;
+}
+
+h2 {
+
+	font-size:1.6em;
+	margin-bottom:0.3em;
+
+}
+
+h3 {
+
+	margin-bottom:0.2em;
+
+}
+
+p {
+
+	margin-bottom:0.2em;
+
+}
+
 time {
 
 	display:block;
@@ -91,7 +116,7 @@ time {
 
 article {
 
-	border-bottom:1px solid #7E9899;
+
 }
 
 nav li {
@@ -101,6 +126,7 @@ nav li {
 
 #header {
 
+	position:relative;
 	background:#203E42;
 	margin:1%;
 
@@ -112,12 +138,21 @@ nav li {
 
 }
 
+#simple_search {
+
+	position:absolute;
+	right:5%;
+	bottom:10%;
+
+}
+
 .box {
 
 	background:#203E42;
 	border-radius:5px;
 	margin:3%;
 	padding:1%;
+	border-bottom:1px solid #7E9899;
 
 }
 
@@ -131,6 +166,18 @@ nav li {
 #sidebar {
 
 	float:left;
+
+}
+
+.lending {
+
+	margin-bottom:0.5em;
+
+}
+
+#sidebar > ul {
+
+	margin:0.5em 0;
 
 }
 
