--- a/templates/lib_admin/catalogue.html
+++ b/templates/lib_admin/catalogue.html
@@ -2,4 +2,29 @@
 
 {% block content %}
 
+	{% if author %}
+	<article class="box">
+	<h1>{{author.name}}</h1>
+	{{author.bio|safe|linebreaks}}
+	Books by this author:
+	</article>
+	{% else %}
+		{% if genre %}
+	<article class="box">
+	<h1>{{genre.name}}</h1>
+	{{genre.description|safe|linebreaks}}
+	Books by this genre:
+	</article>
+		{% endif %}
+	{% endif %}
+	{% if books %}
+	{% for book  in books %}
+	<article class="box">
+		<h2>
+			<a href="{{book.get_absolute_url}}">{{book.name}}</a>
+		</h2>
+		{{book.synopsis|truncatewords:3}}
+	</article>
+	{% endfor %}
+	{% endif %}
 {% endblock content %}
