--- a/templates/lib_admin/base.html
+++ b/templates/lib_admin/base.html
@@ -7,7 +7,7 @@
 	</head>
 	<body>
 		<div id="header" class="box">
-			{% block branding %}<h1>{{library.name}}</h1> {% endblock %}
+			{% block branding %}<h1>{{library.name}}</h1>{% endblock %}
 			<nav>
 			<ul>
 				<li>
@@ -26,7 +26,7 @@
 			</nav>
 			<form action="/search/" id="simple_search" method="POST">
 				{% csrf_token %}
-				<input name="search_string" type="text" placeholder="Search by author or name" />
+				<input name="search_string" type="text" placeholder="Search by ISBN, author or name" value="{{search}}"/>
 				<input type="submit" value="Search" />
 			</form>
 		</div>
