Added first letter navigation to authors template, css fixes, show preview only to logged in users

--- a/la/templates/lib_admin/authors.html
+++ b/la/templates/lib_admin/authors.html
@@ -1,14 +1,21 @@
 {% extends "lib_admin/base.html" %}
 {% load lib_extras %}
 
+{% block nav %}
+
+	{% for author in authors.object_list %}
+		{% ifchanged author.last_name|first %}
+		<li>
+			<a href="#{{author.last_name|first|lower}}">
+				{{author.last_name|first}}
+			</a>
+		</li>
+		{% endifchanged %}
+	{% endfor %}
+
+{% endblock nav %}
+
 {% block content %}
-{% for author in authors.object_list %}
-	{% ifchanged author.last_name|first %}
-	<a href="#{{author.last_name|first|lower}}">
-		{{author.last_name|first}}
-	</a>
-	{% endifchanged %}
-{% endfor %}
 
 {% for author in authors.object_list %}
 	{% ifchanged author.last_name|first %}
@@ -16,7 +23,7 @@
 			<h2>{{author.last_name|first }}</h2>
 	{% endifchanged %}
 
-		<article class="box">
+		<article class="box inner">
 		<a href="{{author.get_absolute_url}}">{{author.name}}</a>
 		</article>
 
