--- a/la/templates/lib_admin/base.html
+++ b/la/templates/lib_admin/base.html
@@ -27,6 +27,9 @@
 				{% if user.is_authenticated %}
 				Hello, {{ user.first_name }}.
 				<a href="{% url logout %}">Logout</a>
+					{% if user.is_staff %}
+						<a href="{% url admin %}">Admin</a>
+					{% endif %}
 				{% else %}
 				Please <a href="{% url login %}">login</a> to reserve books.
 				{% endif %}
