--- a/la/static/css/style.css
+++ b/la/static/css/style.css
@@ -184,8 +184,8 @@ nav li {
 
 	background:#203E42;
 	border-radius:5px;
-	margin:3%;
-	padding:1%;
+	margin:2em;
+	padding:1em;
 	border-bottom:1px solid #7E9899;
 
 }
@@ -193,7 +193,7 @@ nav li {
 .inner {
 
 	border: 1px solid #DB9655;
-	margin-bottom:1%;
+	margin: 0.6em;
 
 }
 
