--- a/la/templates/lib_admin/base.html
+++ b/la/templates/lib_admin/base.html
@@ -27,12 +27,15 @@
 				{% if user.is_authenticated %}
 				Hello, {{ user.first_name }}.
 				<a href="{% url logout %}">Logout</a>
+				<div>
+					<a href="{% url user_checkouts %}">My checkouts</a>
 					{% if user.is_staff %}
 						<a href="{% url admin %}">Admin</a>
 					{% endif %}
 				{% else %}
 				Please <a href="{% url login %}">login</a> to reserve books.
 				{% endif %}
+				</div>
 			</div>
 			<form action="/search/" id="simple_search" method="GET">
 				<input name="search" type="text" placeholder="Search by ISBN, author or name" value="{{search}}"/>
