Added bodyclass block, added full class on login template, modified style accordingly

--- a/la/static/css/style.css
+++ b/la/static/css/style.css
@@ -210,7 +210,9 @@ nav li {
 
 }
 
-
+.full #content {
+	width: 100%;
+}
 article {
 
 
@@ -237,7 +239,13 @@ article {
 
 #sidebar {
 
-	float:left;
+	float: left;
+
+}
+
+.full #sidebar {
+	
+	display: none;
 
 }
 
