Added jquery-ui to project, to widget media, to request queue

--- a/la/templates/lib_admin/checkout.html
+++ b/la/templates/lib_admin/checkout.html
@@ -1,5 +1,10 @@
 {% extends "lib_admin/base_admin.html" %}
 
+{% block extraScripts %}
+	{{ block.super }}
+	{{ form.form.media }}
+{% endblock extraScripts %}
+
 {% block content %}
 <div class="hidden" id="extra-form">
 	{{ extraBooksFormset.empty_form }}
