Finally working checkout form!

--- a/la/templates/lib_admin/checkout.html
+++ b/la/templates/lib_admin/checkout.html
@@ -11,6 +11,10 @@
 </div>
 
 <div class="box">
+	{{valid}}
+	{% for error in errors %}
+		{{ error }}
+	{% endfor %}
 	<form action="" method="POST" >
 		{% csrf_token %}
 		<div id="checkout-form">
