--- a/la/templates/lib_admin/base.html
+++ b/la/templates/lib_admin/base.html
@@ -65,7 +65,7 @@
 						<a href="{% url checkin %}">Checkin</a>
 					</li>
 					<li>
-						<a href="{% url addbook %}">Add book</a>
+						<a href="{% url add_book %}">Add book</a>
 					</li>
 					<li>
 						<a href="{#% url adduser %#}">Add user</a>
