Added register/edit user forms. Also basic security by requiring user registering and user belonging to staff for certain views.

--- a/la/templates/lib_admin/base.html
+++ b/la/templates/lib_admin/base.html
@@ -68,7 +68,7 @@
 						<a href="{% url add_book %}">Add book</a>
 					</li>
 					<li>
-						<a href="{#% url adduser %#}">Add user</a>
+						<a href="{% url register %}">Add user</a>
 					</li>
 					<li>
 						<a href="{#% url adduser %#}">Checkouts</a>
