--- a/la/templates/lib_admin/book.html
+++ b/la/templates/lib_admin/book.html
@@ -6,7 +6,7 @@
 <article class="box">
 	{% if book.cover %}
 	<div class="cover">
-		<img src="{{book.cover.url}}" alt="" />
+		<img width=300 src="{{book.cover.url}}" alt="" />
 	</div>
 	{% endif %}
 	<h1>{{book.name}}</h1>
