--- a/la/templates/lib_admin/base.html
+++ b/la/templates/lib_admin/base.html
@@ -33,6 +33,7 @@
 				<a href="{% url logout %}">Logout</a>
 				<div>
 					<a href="{% url user_checkouts %}">My checkouts</a>
+					<a href="{% url user_profile %}">My profile</a>
 					{% if user.is_staff %}
 						<a href="{% url admin %}">Admin</a>
 					{% endif %}
