--- a/la/templates/lib_admin/base.html
+++ b/la/templates/lib_admin/base.html
@@ -72,6 +72,9 @@
 						<a href="{% url create_user %}">Add user</a>
 					</li>
 					<li>
+						<a href="{% url edit_user %}">Edit user</a>
+					</li>
+					<li>
 						<a href="{#% url adduser %#}">Checkouts</a>
 					</li>
 					<li>
