--- a/la/templates/lib_admin/base_admin.html
+++ b/la/templates/lib_admin/base_admin.html
@@ -5,5 +5,5 @@
 {% endblock nav %}
 
 {% block extraScripts %}
-<script type="text/javascript"i src="{{ STATIC_URL }}js/behave.js"></script>
+<script type="text/javascript" src="{{ STATIC_URL }}js/behave.js"></script>
 {% endblock extraScripts %}
