Added crud for genres & authors.

--- a/la/templates/lib_admin/base.html
+++ b/la/templates/lib_admin/base.html
@@ -75,10 +75,13 @@
 						<a href="{% url edit_user %}">Edit user</a>
 					</li>
 					<li>
-						<a href="{#% url adduser %#}">Checkouts</a>
+						<a href="{% url add_author %}">Add author</a>
 					</li>
 					<li>
-						<a href="{#% url adduser %#}">Users</a>
+						<a href="{% url add_genre %}">Add genre</a>
+					</li>
+					<li>
+						<a href="{% url edit_settings %}">Settings</a>
 					</li>
 				</ul>
 	</nav>
